test_suite/tests/ui/unknown-attribute/variant.stderr
error: unknown serde variant attribute `abc`
 --> $DIR/variant.rs:6:13
  |
6 |     #[serde(abc = "xyz")]
  |             ^^^

error: aborting due to previous error

